# McRenderer

./: .gitignore  CMakeLists.txt  README.MD  renderer.cbp
cmake/: FindSDL2_image.cmake
lib/glm/glm/detail/: dummy.cpp
src/: CameraKeyboardController.cpp  CameraKeyboardController.hpp  Exception.cpp  Exception.hpp  IOUtility.cpp  IOUtility.hpp  SDLauxiliary.cpp  SDLauxiliary.h  SDLauxiliary.hpp  main.cpp
src/brdf/: Brdf.hpp  HemisphereSampler.cpp  HemisphereSampler.hpp  MicroFacetShader.cpp  MicroFacetShader.hpp  RGBImageSampler.cpp  RGBImageSampler.hpp
src/brdf/lambert/: LamberShader.cpp  LamberShader.hpp
src/brdf/phong/: PhongShader.cpp  PhongShader.hpp
src/image/: ConstantFloatSampler.cpp  GrayScaleImageSampler.cpp  Image.cpp  Image.hpp  PngReader.cpp  PngReader.hpp
src/maps/: SphericalEnvMap.cpp  SphericalEnvMap.hpp  TextureMap2D.cpp  TextureMap2D.hpp
src/math/: FastMath.hpp
src/rendering/: GaussianSampler.cpp  GaussianSampler.hpp  PathTracer.cpp  PathTracer.hpp  PathTracingRenderer.cpp  PathTracingRenderer.hpp  RayTracer.cpp  RayTracer.hpp  RayTracerConfig.cpp  RayTracerConfig.hpp  RenderTarget.cpp  RenderTarget.hpp  RenderTargetDrawFunction.cpp  RenderTargetDrawFunction.hpp  RenderTargetDrawingFunction.cpp  RenderTargetDrawingFunction.hpp  Renderer.cpp  Renderer.hpp  SubPixelReconstructionFilter.cpp  SubPixelReconstructionFilter.hpp  UniformSampler.cpp  UniformSampler.hpp  UniformStratifiedSampler.cpp  UniformStratifiedSampler.hpp
src/scene/: AxisAlignedBoundingBox.cpp  AxisAlignedBoundingBox.hpp  AxisAlignedPlane.cpp  AxisAlignedPlane.hpp  BoundingBox.cpp  BoundingBox.hpp  Camera.cpp  Camera.hpp  Light.cpp  Light.hpp  Line.cpp  Line.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Plane.cpp  Plane.hpp  Ray.cpp  Ray.hpp  RayIntersecting.hpp  Scene.cpp  Scene.hpp  SceneObject.hpp  SimpleScene.cpp  SimpleScene.hpp  Sphere.cpp  Sphere.hpp  TestModelH.h  TextureMap.cpp  TextureMap.hpp  TextureSampler2D.cpp  TextureSampler2D.hpp  Transform.cpp  Transform.hpp  Triangle.cpp  Triangle.hpp  Vertex.cpp  Vertex.hpp
src/shading/: ConstantColourSampler.cpp  ConstantColourSampler.hpp  ConstantFloatSampler.hpp  GrayScaleImageSampler.hpp  Material.hpp  RGBImageSampler.hpp  UvSampler1D.hpp  UvSampler3D.hpp
src/shading/blinn/: BlinnMaterial.cpp  BlinnMaterial.hpp  BlinnShader.cpp  BlinnShader.hpp
src/shading/lambert/: LamberShader.cpp  LamberShader.hpp
src/shading/pbr/: PbrMaterial.cpp  PbrMaterial.hpp  PbrShader.cpp  PbrShader.hpp
src/shading/phong/: PhongMaterial.cpp  PhongMaterial.hpp  PhongShader.hpp
src/structure/: BVH.cpp  BVH.hpp
src/tree/: BoundingBox.hpp  KdTree.cpp  KdTree.hpp
src/window/: DrawingTask.cpp  DrawingTask.hpp  KeyboardEvent.cpp  KeyboardEvent.hpp  KeyboardEventHandler.cpp  KeyboardEventHandler.hpp  TestDrawFunction.cpp  TestDrawFunction.hpp  Window.cpp  Window.hpp
tests/: testMain.cpp
tests/scene/: MeshTests.hpp  RayBoundingBoxTests.hpp  RayTests.hpp  SphereTest.hpp
